--- a/documentation/operators/count.html
+++ b/documentation/operators/count.html
@@ -28,6 +28,7 @@ id: count
    <h4>See Also</h4>
    <ul>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#Count"><cite>Introduction to Rx</cite>: Count</a></li>
+    <li><a href="http://rxmarbles.com/#count">RxMarbles: <code>count</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
