--- a/documentation/operators/delay.html
+++ b/documentation/operators/delay.html
@@ -25,6 +25,8 @@ id: delay
    <h4>See Also</h4>
    <ul>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/13_TimeShiftedSequences.html#Delay"><cite>Introduction to Rx</cite>: Delay</a></li>
+    <li><a href="http://rxmarbles.com/#delay">RxMarbles: <code>delay</code></a></li>
+    <li><a href="http://rxmarbles.com/#delayWithSelector">RxMarbles: <code>delayWithSelector</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
