--- a/documentation/operators/distinct.html
+++ b/documentation/operators/distinct.html
@@ -29,6 +29,8 @@ id: distinct
    <ul>
     <li><a href="filter.html"><span class="operator">Filter</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/05_Filtering.html#Distinct"><cite>Introduction to Rx</cite>: Distinct and DistinctUntilChanged</a></li>
+    <li><a href="http://rxmarbles.com/#distinct">RxMarbles: <code>distinct</code></a></li>
+    <li><a href="http://rxmarbles.com/#distinctUntilChanged">RxMarbles: <code>distinctUntilChanged</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
