--- a/documentation/operators/elementat.html
+++ b/documentation/operators/elementat.html
@@ -26,6 +26,7 @@ id: elementAt
     <li><a href="first.html"><span class="operator">First</span></a></li>
     <li><a href="last.html"><span class="operator">Last</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/06_Inspection.html#ElementAt"><cite>Introduction to Rx</cite>: ElementAt and ElementAtUntilChanged</a></li>
+    <li><a href="http://rxmarbles.com/#elementAt">RxMarbles: <code>elementAt</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
