--- a/documentation/operators/filter.html
+++ b/documentation/operators/filter.html
@@ -24,6 +24,7 @@ id: filter
    <ul>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/05_Filtering.html#Where"><cite>Introduction to Rx</cite>: Where</a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/08_Transformation.html#CastAndOfType"><cite>Introduction to Rx</cite>: Cast and OfType</a></li>
+    <li><a href="http://rxmarbles.com/#filter">RxMarbles: <code>filter</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
