--- a/documentation/operators/first.html
+++ b/documentation/operators/first.html
@@ -38,6 +38,9 @@ id: first
     <li><a href="take.html"><span class="operator">Take</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#First"><cite>Introduction to Rx</cite>: First</a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#Single"><cite>Introduction to Rx</cite>: Single</a></li>
+    <li><a href="http://rxmarbles.com/#find">RxMarbles: <code>find</code></a></li>
+    <li><a href="http://rxmarbles.com/#findIndex">RxMarbles: <code>findIndex</code></a></li>
+    <li><a href="http://rxmarbles.com/#first">RxMarbles: <code>first</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
