--- a/documentation/operators/scan.html
+++ b/documentation/operators/scan.html
@@ -31,6 +31,7 @@ id: scan
    <ul>
     <li><a href="reduce.html"><span class="operator">Reduce</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#Scan"><cite>Introduction to Rx</cite>: Scan</li>
+    <li><a href="http://rxmarbles.com/#scan">RxMarbles: <code>scan</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
