--- a/documentation/operators/takeuntil.html
+++ b/documentation/operators/takeuntil.html
@@ -33,6 +33,7 @@ id: takeUntil
     <li><a href="takelast.html"><span class="operator">TakeLast</span></a></li>
     <li><a href="takewhile.html"><span class="operator">TakeWhile</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/05_Filtering.html#SkipUntilTakeUntil"><cite>Introduction to Rx</cite>: SkipUntil and TakeUntil</a></li>
+    <li><a href="http://rxmarbles.com/#takeUntil">RxMarbles: <code>takeUntil</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
