--- a/documentation/operators/average.html
+++ b/documentation/operators/average.html
@@ -25,6 +25,7 @@ id: average
    <ul>
     <li><a href="sum.html"><span class="operator">Sum</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#MaxAndMin"><cite>Introduction to Rx</cite>: Min, Max, Sum, and Average</a></li>
+    <li><a href="http://rxmarbles.com/#average">RxMarbles: <code>average</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
