--- a/documentation/operators/combinelatest.html
+++ b/documentation/operators/combinelatest.html
@@ -32,6 +32,7 @@ id: combinelatest
    <ul>
     <li><a href="zip.html"><span class="operator">Zip</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/12_CombiningSequences.html#CombineLatest"><cite>Introduction to Rx</cite>: CombineLatest</a></li>
+    <li><a href="http://rxmarbles.com/#combineLatest">RxMarbles: <code>combineLatest</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
