--- a/documentation/operators/debounce.html
+++ b/documentation/operators/debounce.html
@@ -27,6 +27,8 @@ id: debounce
     <li><a href="sample.html"><span class="operator">Sample</span></a></li>
     <li><a href="window.html"><span class="operator">Window</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/13_TimeShiftedSequences.html#Throttle"><cite>Introduction to Rx</cite>: Throttle</a></li>
+    <li><a href="http://rxmarbles.com/#throttle">RxMarbles: <code>throttle</code></a></li>
+    <li><a href="http://rxmarbles.com/#throttleWithSelector">RxMarbles: <code>throttleWithSelector</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
