--- a/documentation/operators/last.html
+++ b/documentation/operators/last.html
@@ -32,6 +32,7 @@ id: last
     <li><a href="take.html"><span class="operator">Take</span></a></li>
     <li><a href="takeLast.html"><span class="operator">TakeLast</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#Last"><cite>Introduction to Rx</cite>: Last</a></li>
+    <li><a href="http://rxmarbles.com/#last">RxMarbles: <code>last</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
