--- a/documentation/operators/map.html
+++ b/documentation/operators/map.html
@@ -26,6 +26,7 @@ id: map
    <ul>
     <li><a href="flatmap"><span class="operator">FlatMap</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/08_Transformation.html#Select"><cite>Introduction to Rx</cite>: Select</li>
+    <li><a href="http://rxmarbles.com/#map">RxMarbles: <code>map</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
