--- a/documentation/operators/max.html
+++ b/documentation/operators/max.html
@@ -26,6 +26,7 @@ id: max
    <ul>
     <li><a href="min.html"><span class="operator">Min</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#MaxAndMin"><cite>Introduction to Rx</cite>: Min, Max, Sum, and Average</a></li>
+    <li><a href="http://rxmarbles.com/#max">RxMarbles: <code>max</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
