--- a/documentation/operators/reduce.html
+++ b/documentation/operators/reduce.html
@@ -31,6 +31,7 @@ id: reduce
    <ul>
     <li><a href="scan.html"><span class="operator">Scan</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#Aggregate"><cite>Introduction to Rx</cite>: Aggregate</li>
+    <li><a href="http://rxmarbles.com/#reduce">RxMarbles: <code>reduce</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
