--- a/documentation/operators/skipuntil.html
+++ b/documentation/operators/skipuntil.html
@@ -32,6 +32,7 @@ id: skipUntil
     <li><a href="takeuntil.html"><span class="operator">TakeUntil</span></a></li>
     <li><a href="takewhile.html"><span class="operator">TakeWhile</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/05_Filtering.html#SkipUntilTakeUntil"><cite>Introduction to Rx</cite>: SkipUntil and TakeUntil</a></li>
+    <li><a href="http://rxmarbles.com/#skipUntil">RxMarbles: <code>skipUntil</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
