--- a/documentation/operators/startwith.html
+++ b/documentation/operators/startwith.html
@@ -29,6 +29,7 @@ id: startwith
    <ul>
     <li><a href="concat.html"><span class="operator">Concat</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/12_CombiningSequences.html#StartWith"><cite>Introduction to Rx</cite>: StartWith</a></li>
+    <li><a href="http://rxmarbles.com/#startWith">RxMarbles: <code>startWith</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
