--- a/documentation/operators/sum.html
+++ b/documentation/operators/sum.html
@@ -26,6 +26,7 @@ id: sum
    <ul>
     <li><a href="average.html"><span class="operator">Average</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#MaxAndMin"><cite>Introduction to Rx</cite>: Min, Max, Sum, and Average</a></li>
+    <li><a href="http://rxmarbles.com/#sum">RxMarbles: <code>sum</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
