--- a/documentation/operators/take.html
+++ b/documentation/operators/take.html
@@ -32,6 +32,7 @@ id: take
     <li><a href="takeuntil.html"><span class="operator">TakeUntil</span></a></li>
     <li><a href="takewhile.html"><span class="operator">TakeWhile</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/05_Filtering.html#SkipAndTake"><cite>Introduction to Rx</cite>: Skip and Take</a></li>
+    <li><a href="http://rxmarbles.com/#take">RxMarbles: <code>take</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
