--- a/documentation/operators/takelast.html
+++ b/documentation/operators/takelast.html
@@ -32,6 +32,7 @@ id: takeLast
     <li><a href="takeuntil.html"><span class="operator">TakeUntil</span></a></li>
     <li><a href="takewhile.html"><span class="operator">TakeWhile</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/05_Filtering.html#SkipLastTakeLast"><cite>Introduction to Rx</cite>: SkipLast and TakeLast</a></li>
+    <li><a href="http://rxmarbles.com/#takeLast">RxMarbles: <code>takeLast</code></a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
