remove deprecated operator variant from Switch
switchLatest is a deprecated synonym for switch in RxJS

--- a/documentation/operators/switch.html
+++ b/documentation/operators/switch.html
@@ -77,7 +77,7 @@ id: switch
     </figure>
   {% endlang_operator %}
 
-  {% lang_operator RxJS switch switchLatest %}
+  {% lang_operator RxJS switch %}
     <figure class="variant">
      <img src="images/switch.png" width="100%" alt="switch" />
      <figcaption><p>
