--- a/documentation/operators/concat.html
+++ b/documentation/operators/concat.html
@@ -46,6 +46,8 @@ id: concat
     <li><a href="startwith.html"><span class="operator">StartWith</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/12_CombiningSequences.html#Concat"><cite>Introduction to Rx</cite>: Concat</a></li>
     <li><a href="http://rxmarbles.com/#concat">RxMarbles: <code>concat</code></a></li>
+    <li><a href="http://rxwiki.wikidot.com/101samples#toc51"><cite>101 Rx Samples</cite>: Concat &mdash; cold observable</a></li>
+    <li><a href="http://rxwiki.wikidot.com/101samples#toc52"><cite>101 Rx Samples</cite>: Concat &mdash; hot observable</a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
