--- a/documentation/operators/publish.html
+++ b/documentation/operators/publish.html
@@ -29,6 +29,7 @@ id: publish
  <li><a href="refcount.html"><span class="operator">RefCount</span></a></li>
  <li><a href="replay.html"><span class="operator">Replay</span></a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/14_HotAndColdObservables.html#PublishAndConnect"><cite>Introduction to Rx</cite>: Publish &amp; Connect</a></li>
+ <li><a href="http://rxwiki.wikidot.com/101samples#toc48"><cite>101 Rx Samples</cite>: Publish &mdash; Sharing a subscription with multiple Observers</a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
