--- a/documentation/operators/range.html
+++ b/documentation/operators/range.html
@@ -25,6 +25,7 @@ id: range
 <ul>
  <li><a href="interval.html"><span class="operator">Interval</span></a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/04_CreatingObservableSequences.html#ObservableRange"><cite>Introduction to Rx</cite>: Range</a></li>
+ <li><a href="http://rxwiki.wikidot.com/101samples#toc40"><cite>101 Rx Samples</cite>: Range</a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
