--- a/documentation/operators/timeinterval.html
+++ b/documentation/operators/timeinterval.html
@@ -24,6 +24,7 @@ id: timeInterval
    <ul>
     <li><a href="timestamp.html"><span class="operator">Timestamp</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/08_Transformation.html#TimeStampAndTimeInterval"><cite>Introduction to Rx</cite>: Timestamp and TimeInterval</a></li>
+    <li><a href="http://rxwiki.wikidot.com/101samples#toc31"><cite>101 Rx Samples</cite>: Interval &mdash; With TimeInterval()</a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
