--- a/documentation/operators/timeout.html
+++ b/documentation/operators/timeout.html
@@ -26,6 +26,7 @@ id: timeout
    <ul>
     <li><a href="debounce.html"><span class="operator">Debounce</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/13_TimeShiftedSequences.html#Timeout"><cite>Introduction to Rx</cite>: Timeout</a></li>
+    <li><a href="http://rxwiki.wikidot.com/101samples#toc33"><cite>101 Rx Samples</cite>: Timeout &mdash; Simple</a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
