--- a/documentation/operators/timer.html
+++ b/documentation/operators/timer.html
@@ -27,6 +27,7 @@ id: timer
  <li><a href="interval.html"><span class="operator">Interval</span></a></li>
  <li><a href="just.html"><span class="operator">Just</span></a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/04_CreatingObservableSequences.html#ObservableTimer"><cite>Introduction to Rx</cite>: Timer</a></li>
+ <li><a href="http://rxwiki.wikidot.com/101samples#toc34"><cite>101 Rx Samples</cite>: Timer &mdash; Simple</a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
