--- a/documentation/operators/window.html
+++ b/documentation/operators/window.html
@@ -37,6 +37,7 @@ id: window
    <ul>
     <li><a href="buffer.html"><span class="operator">Buffer</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/17_SequencesOfCoincidence.html#Window"><cite>Introduction to Rx</cite>: Window</a></li>
+    <li><a href="http://rxwiki.wikidot.com/101samples#toc38"><cite>101 Rx Samples</cite>: Window</a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
