--- a/documentation/operators/zip.html
+++ b/documentation/operators/zip.html
@@ -33,6 +33,7 @@ id: zip
     <li><a href="combinelatest.html"><span class="operator">CombineLatest</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/12_CombiningSequences.html#Zip"><cite>Introduction to Rx</cite>: Zip</a></li>
     <li><a href="http://rxmarbles.com/#zip">RxMarbles: <code>zip</code></a></li>
+    <li><a href="http://rxwiki.wikidot.com/101samples#toc49"><cite>101 Rx Samples</cite>: Zip</a></li>
    </ul>
  
    <h2>Language-Specific Information:</h2>
