--- a/documentation/operators/buffer.html
+++ b/documentation/operators/buffer.html
@@ -38,6 +38,7 @@ id: buffer
   <li><a href="window.html"><span class="operator">Window</span></a></li>
   <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/13_TimeShiftedSequences.html#Buffer"><cite>Introduction to Rx</cite>: Buffer</a></li>
   <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/17_SequencesOfCoincidence.html#BufferRevisted"><cite>Introduction to Rx</cite>: Buffer revisited</a></li>
+  <li><a href="http://rxwiki.wikidot.com/101samples#toc26"><cite>101 Rx Samples</cite>: Buffer &mdash; Simple</a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
