--- a/documentation/operators/create.html
+++ b/documentation/operators/create.html
@@ -31,6 +31,7 @@ id: create
 <ul>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/04_CreatingObservableSequences.html#ObservableCreate"><cite>Introduction to Rx</cite>: Create</a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/04_CreatingObservableSequences.html#ObservableGenerate"><cite>Introduction to Rx</cite>: Generate</a></li>
+ <li><a href="http://rxwiki.wikidot.com/101samples#toc42"><cite>101 Rx Samples</cite>: Generate</a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
