--- a/documentation/operators/debounce.html
+++ b/documentation/operators/debounce.html
@@ -29,6 +29,7 @@ id: debounce
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/13_TimeShiftedSequences.html#Throttle"><cite>Introduction to Rx</cite>: Throttle</a></li>
     <li><a href="http://rxmarbles.com/#throttle">RxMarbles: <code>throttle</code></a></li>
     <li><a href="http://rxmarbles.com/#throttleWithSelector">RxMarbles: <code>throttleWithSelector</code></a></li>
+    <li><a href="http://rxwiki.wikidot.com/101samples#toc30"><cite>101 Rx Samples</cite>: Throttle &mdash; Simple</a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
