--- a/documentation/operators/delay.html
+++ b/documentation/operators/delay.html
@@ -27,6 +27,7 @@ id: delay
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/13_TimeShiftedSequences.html#Delay"><cite>Introduction to Rx</cite>: Delay</a></li>
     <li><a href="http://rxmarbles.com/#delay">RxMarbles: <code>delay</code></a></li>
     <li><a href="http://rxmarbles.com/#delayWithSelector">RxMarbles: <code>delayWithSelector</code></a></li>
+    <li><a href="http://rxwiki.wikidot.com/101samples#toc27"><cite>101 Rx Samples</cite>: Delay &mdash; Simple</a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
