--- a/documentation/operators/from.html
+++ b/documentation/operators/from.html
@@ -33,6 +33,7 @@ id: from
 <ul>
  <li><a href="just.html"><span class="operator">Just</span></a></li>
  <li><a href="start.html"><span class="operator">Start</span></a></li>
+ <li><a href="http://rxwiki.wikidot.com/101samples#toc5"><cite>101 Rx Samples</cite>: Observation Operators</a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
