--- a/documentation/operators/interval.html
+++ b/documentation/operators/interval.html
@@ -27,6 +27,8 @@ id: interval
  <li><a href="repeat.html"><span class="operator">Repeat</span></a></li>
  <li><a href="timer.html"><span class="operator">Timer</span></a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/04_CreatingObservableSequences.html#ObservableInterval"><cite>Introduction to Rx</cite>: Interval</a></li>
+ <li><a href="http://rxwiki.wikidot.com/101samples#toc15"><cite>101 Rx Samples</cite>: Observing the Passing of Time</a></li>
+ <li><a href="http://rxwiki.wikidot.com/101samples#toc28"><cite>101 Rx Samples</cite>: Interval &mdash; Simple</a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
