--- a/documentation/operators/join.html
+++ b/documentation/operators/join.html
@@ -41,6 +41,7 @@ id: join
  <li><a href="zip.html"><span class="operator">Zip</span></a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/17_SequencesOfCoincidence.html#Join"><cite>Introduction to Rx</cite>: Join</a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/17_SequencesOfCoincidence.html#GroupJoin"><cite>Introduction to Rx</cite>: GroupJoin</a></li>
+ <li><a href="http://rxwiki.wikidot.com/101samples#toc39"><cite>101 Rx Samples</cite>: GroupJoin &mdash; Joins two streams by matching by one of their attributes</a></li>
 </ul>
 
 <h2>Language-Specific Information:</h2>
