--- a/documentation/operators/merge.html
+++ b/documentation/operators/merge.html
@@ -43,6 +43,7 @@ id: merge
     <li><a href="concat.html"><span class="operator">Concat</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/12_CombiningSequences.html#Merge"><cite>Introduction to Rx</cite>: Merge</a></li>
     <li><a href="http://rxmarbles.com/#merge">RxMarbles: <code>merge</code></a></li>
+    <li><a href="http://rxwiki.wikidot.com/101samples#toc47"><cite>101 Rx Samples</cite>: Merge</a></li>
    </ul>
 
    <h2>Language-Specific Information:</h2>
